--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
         // the column headers of the info you want in your popup
         var optionsJSON = ["placename", "photo-url"]
         // an html template for your popup
-        var template = "<ul><li><a href='{{photo-url}}' target='_blank'>"
-                     + "<img src='{{photo-url}}'></a></li>"
-                     + "<li><h4>{{placename}}</h4></li></ul>"
+        var template = "<ul><li><h4>{{placename}}</h4></li>"
+                 + "<li>Outdoor Seating: {{outdoorseating}}</li>"
+                 + "<li>Power Socket: {{powersocket}}</li>"
+                 + "<li>Couch: {{couch}}</li>"
+                 + "<li>Brew: {{brew}}</li></ul>"
         var geoJSON = Sheetsee.createGeoJSON(data, optionsJSON)
         var map = Sheetsee.loadMap("map")
         // Try different map tiles? examples.map-20v6611k
