--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         // examples.map-i86nkdio
         // examples.h186knp8
         Sheetsee.addTileLayer(map, 'raybesiga.lbooidnh')
-        Sheetsee.addMarkerLayer(geoJSON, map, template)
+        Sheetsee.addMarkerLayer(geoJSON, map, template, 7)
       }
     </script>
   </body>
