--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
                  + "<li>Couch: {{couch}}</li>"
                  + "<li>Brew: {{brew}}</li></ul>"
         var geoJSON = Sheetsee.createGeoJSON(data, optionsJSON)
-        var map = Sheetsee.loadMap("map").setView([0.317, 32.579], 15)
+        var map = Sheetsee.loadMap("map").setView([0.317, 32.579], 14)
         // Try different map tiles? examples.map-20v6611k
         // examples.map-y7l23tes
         // examples.map-h67hf2ic
         // examples.map-i86nkdio
         // examples.h186knp8
         Sheetsee.addTileLayer(map, 'raybesiga.lbooidnh')
-        Sheetsee.addMarkerLayer(geoJSON, map, template, 14)
+        Sheetsee.addMarkerLayer(geoJSON, map, template)
       }
     </script>
   </body>
