--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="js/sheetsee.js"></script>
     <link   type='text/css' rel='stylesheet' href='http://api.tiles.mapbox.com/mapbox.js/v1.0.0/mapbox.css'>
     <!-- Add a Title -->
-    <title>Map</title>
+    <title>Kampala Wifi Hotspots</title>
   </head>
   <style>
     html {width: 100%; height: 100%;}
@@ -36,17 +36,12 @@
         var optionsJSON = ["placename", "outdoorseating", "powersocket", "couch", "brew"]
         // an html template for your popup
         var template = "<ul><li><h4>{{placename}}</h4></li>"
-                 + "<li>Outdoor Seating: {{outdoorseating}}</li>"
-                 + "<li>Power Socket: {{powersocket}}</li>"
-                 + "<li>Couch: {{couch}}</li>"
-                 + "<li>Brew: {{brew}}</li></ul>"
+                 + "<li><b>Outdoor Seating:</b> {{outdoorseating}}</li>"
+                 + "<li><b>Power Socket:</b> {{powersocket}}</li>"
+                 + "<li><b>Couch:</b> {{couch}}</li>"
+                 + "<li><b>Brew:</b> {{brew}}</li></ul>"
         var geoJSON = Sheetsee.createGeoJSON(data, optionsJSON)
         map = Sheetsee.loadMap("map").setView([0.317, 32.579], 14)
-        // Try different map tiles? examples.map-20v6611k
-        // examples.map-y7l23tes
-        // examples.map-h67hf2ic
-        // examples.map-i86nkdio
-        // examples.h186knp8
         Sheetsee.addTileLayer(map, 'raybesiga.lbooidnh')
         Sheetsee.addMarkerLayer(geoJSON, map, template)
       }
