--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         var geoJSON = Sheetsee.createGeoJSON(data, optionsJSON)
         map = Sheetsee.loadMap("map").setView([0.317, 32.579], 14)
         Sheetsee.addTileLayer(map, 'raybesiga.lbooidnh')
-        Sheetsee.addMarkerLayer(geoJSON, map, template)
+        Sheetsee.addMarkerLayer(geoJSON, map, template, 13)
       }
     </script>
   </body>
