--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                  + "<li><b>Couch:</b> {{couch}}</li>"
                  + "<li><b>Brew:</b> {{brew}}</li></ul>"
         var geoJSON = Sheetsee.createGeoJSON(data, optionsJSON)
-        map = Sheetsee.loadMap("map").setView([0.317, 32.579], 14)
+        map = Sheetsee.loadMap("map")
         Sheetsee.addTileLayer(map, 'raybesiga.lbooidnh')
         Sheetsee.addMarkerLayer(geoJSON, map, template, 13)
       }
