--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         Sheetsee.addTileLayer(map, 'raybesiga.lbooidnh')
         Sheetsee.addMarkerLayer(geoJSON, map, template, 13)
       }
-      map..setView([0.317, 32.579], 13);
+      map.setView([0.317, 32.579], 13);
     </script>
   </body>
 </html>
