--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@
     <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
   <link rel="stylesheet" href="css/github.css">
   </head>
-<!-- /*  <style>
-    html {width: 100%; height: 100%;}
-    body {width: 100%; height: 100%; margin: 0;}
 
-  </style>*/ -->
   <body>
 
 
@@ -47,7 +43,7 @@
   <div class="container">
     <section class="header">
       <h2 class="title">Map Kampala's Wifi Hotspots</h2>
-       <!-- Why use Skeleton -->
+
     <div class="docs-section" id="intro">
       <h6 class="docs-header">Why?</h6>
       <p>Easy place to search for the best wifi in Kampala. Especially for first time visitors</p>
@@ -78,68 +74,17 @@
 
     <div class="section education" id="hotspot">
     <div class="container">
-      <h3 class="section-heading">Education Indicators</h3>
+      <h3 class="section-heading">Adding a Hotspot</h3>
 
       <div class="row">
-        <div class="one-half column category">
-          <div class="chart-wrapper">
-          <div class="chart-title">
-            Youth Literacy Rate
-          </div>
-          <div class="chart-stage">
-            <div id="chart-06"></div>
-          </div>
-          <div class="chart-notes">
-            % of people ages 15-24
-          </div>
-        </div>
-        </div>
-        <div class="one-half column category">
-          <div class="chart-wrapper">
-          <div class="chart-title">
-            Primary School Enrollment
-          </div>
-          <div class="chart-stage">
-            <div id="chart-07"></div>
-          </div>
-          <div class="chart-notes">
-            Total Number
-          </div>
-        </div>
-        </div>
+        <p>
       </div>
-      <div class="row">
-        <div class="one-half column category">
-          <div class="chart-wrapper">
-          <div class="chart-title">
-            Progression to secondary school, female
-          </div>
-          <div class="chart-stage">
-            <div id="chart-08"></div>
-          </div>
-          <div class="chart-notes">
-            Girls going to secondary school
-          </div>
-        </div>
-        </div>
-        <div class="one-half column category">
-          <div class="chart-wrapper">
-          <div class="chart-title">
-            Pupil-Teacher Ratio
-          </div>
-          <div class="chart-stage">
-            <div id="chart-09"></div>
-          </div>
-          <div class="chart-notes">
-            In primary schools
-          </div>
-        </div>
-        </div>
-      </div>
-    </div>
+
   </div>
 
-<p class="small text-muted">Built with &#9829; by <a href="http://sparkpl.ug" target="_blank">Sparkplug</a>. Great job on Sheetsee by Jlord</p>
+<footer>
+  <p class="small text-muted">Built with &#9829; by <a href="http://sparkpl.ug" target="_blank">Sparkplug</a>. Great job on Sheetsee by Jlord</p>
+</footer>
 
     <script type="text/javascript">
       var map;
