--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
       <p>Love the idea? Tweet it! We appreciate the &#9829;</p>
       <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://pethe.sparkpl.ug" data-text="Pethe - Public Expenditure Tracker for Health and Education in Uganda" data-via="sparkplugea" data-related="sparkplugea">Tweet</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-      <!-- <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.getskeleton.com&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;share=true&amp;height=21&amp;appId=151131931646052" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px; width:140px" allowTransparency="true"></iframe> -->
-      <iframe src="http://ghbtns.com/github-btn.html?user=sparkplug&repo=pethe&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
-      <iframe src="http://ghbtns.com/github-btn.html?user=sparkplug&repo=pethe&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+
     </div>
 
     </section>
@@ -77,13 +75,19 @@
       <h3 class="section-heading">Adding a Hotspot</h3>
 
       <div class="row">
-        <p>
+        <p>Adding a hotspot is pretty easy. Steps below:</p>
+          <ol>
+            <li>Access Google Spreadsheet <a href="https://docs.google.com/spreadsheets/d/1sQaj4pt6Bn5Y6MoNin4NDs0WfJ200Fn4EFuccd0_Wvo/edit?usp=sharing" target="_blank">here</a></li>
+            <li>Add wifi hotspot details. Or copy, paste, edit.</li>
+            <li>Refresh the page.</li>
+            <li>Smile for a job well done!</li>
+          </ol>
       </div>
 
   </div>
 
 <footer>
-  <p class="small text-muted">Built with &#9829; by <a href="http://sparkpl.ug" target="_blank">Sparkplug</a>. Great job on Sheetsee by Jlord</p>
+  <p class="small text-muted">Built with &#9829; by <a href="http://sparkpl.ug" target="_blank">Sparkplug</a>. Great job on <a href="http://jlord.us/sheetsee.js/" target="_blank">Sheetsee</a> by <a href="http://www.twitter.com/jlord" target="blank">Jessica Lord</p>
 </footer>
 
     <script type="text/javascript">
