--- a/index.html
+++ b/index.html
@@ -75,13 +75,7 @@
       <h3 class="section-heading">Adding a Hotspot</h3>
 
       <div class="row">
-        <p>Adding a hotspot is pretty easy. Steps below:</p>
-          <ol>
-            <li>Access Google Spreadsheet <a href="https://docs.google.com/spreadsheets/d/1sQaj4pt6Bn5Y6MoNin4NDs0WfJ200Fn4EFuccd0_Wvo/edit?usp=sharing" target="_blank">here</a></li>
-            <li>Add wifi hotspot details. Or copy, paste, edit.</li>
-            <li>Refresh the page.</li>
-            <li>Smile for a job well done!</li>
-          </ol>
+        <p>To add a hostpot, access the Google Spreadsheet <a href="https://docs.google.com/spreadsheets/d/1sQaj4pt6Bn5Y6MoNin4NDs0WfJ200Fn4EFuccd0_Wvo/edit?usp=sharing" target="_blank">here</a>. Add the wifi hotspot details. Or copy, paste, edit. Smile, for a job well done, and efresh the page to look up your hotspot. That's it.</p>
       </div>
 
   </div>
