--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@
 
       function showInfo(data) {
         // the column headers of the info you want in your popup
-        var optionsJSON = ["placename", "outdoorseating", "powersocket", "couch", "brew"]
+        var optionsJSON = ["placename", "outdoorseating", "powersocket", "couch", "brew", "address"]
         // an html template for your popup
-        var template = "<ul><li><h4>{{placename}}</h4></li>"
+        var template = "<ul><li><h2>{{placename}}</h2></li>"
+                 + "<li style="color: #FF4646;text-transform: uppercase;font-weight: 700;">{{address}}</li>"
                  + "<li><b>Outdoor Seating:</b> {{outdoorseating}}</li>"
                  + "<li><b>Power Socket:</b> {{powersocket}}</li>"
                  + "<li><b>Couch:</b> {{couch}}</li>"
