--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                  + "<li><b>Outdoor Seating:</b> {{outdoorseating}}</li>"
                  + "<li><b>Power Socket:</b> {{powersocket}}</li>"
                  + "<li><b>Couch:</b> {{couch}}</li>"
-                 + "<li><b>Brew:</b> {{brew}}</li></ul>"
+                 + "<li><b>Special Brew:</b> {{brew}}</li></ul>"
         var geoJSON = Sheetsee.createGeoJSON(data, optionsJSON)
         map = Sheetsee.loadMap("map")
         Sheetsee.addTileLayer(map, 'raybesiga.lbooidnh')
