--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
       function showInfo(data) {
         // the column headers of the info you want in your popup
-        var optionsJSON = ["placename", "outdoorseating", "powersocket", "couch", "brew", "address"]
+        var optionsJSON = ["placename", "address", "outdoorseating", "powersocket", "couch", "brew"]
         // an html template for your popup
         var template = "<ul><li><h2>{{placename}}</h2></li>"
                  + "<li style="color: #FF4646;text-transform: uppercase;font-weight: 700;">{{address}}</li>"
