--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         var optionsJSON = ["placename", "address", "outdoorseating", "powersocket", "couch", "brew"]
         // an html template for your popup
         var template = "<ul><li><h2>{{placename}}</h2></li>"
-                 + "<li><b>{{address}}</b></li>"
+                 + "<li class='colorText'><b>{{address}}</b></li>"
                  + "<li><b>Outdoor Seating:</b> {{outdoorseating}}</li>"
                  + "<li><b>Power Socket:</b> {{powersocket}}</li>"
                  + "<li><b>Couch:</b> {{couch}}</li>"
