--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                  + "<li><b>Outdoor Seating:</b> {{outdoorseating}}</li>"
                  + "<li><b>Power Sockets:</b> {{powersocket}}</li>"
                  + "<li><b>Have Couch:</b> {{couch}}</li>"
-                 + "<li><b>Special Brew:</b> {{brew}}</li></ul>"
-                 + "<p class='colorText'>Located at {{address}}</b></p>"
-                 + "<p>Added by the awesome <a href='http://twitter.com/{{contributortwitter}}' target='_blank'>{{contributortwitter}}</a></p>"
+                 + "<li><b>Special Brew:</b> {{brew}}</li>"
+                 + "<li>Located at {{address}}</li>"
+                 + "<li>Added by the awesome <a href='http://twitter.com/{{contributortwitter}}' target='_blank'>{{contributortwitter}}</li></ul>"
         var geoJSON = Sheetsee.createGeoJSON(data, optionsJSON)
         map = Sheetsee.loadMap("map")
         Sheetsee.addTileLayer(map, 'raybesiga.lbooidnh')
