--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                  + "<li><b>Power Sockets:</b> {{powersocket}}</li>"
                  + "<li><b>Have Couch:</b> {{couch}}</li>"
                  + "<li><b>Special Brew:</b> {{brew}}</li>"
-                 + "<li><i>Added by the awesome <a href='http://twitter.com/{{contributortwitter}}' target='_blank'>{{contributortwitter}}</i></li></ul>"
+                 + "<li><i>Added by <a href='http://twitter.com/{{contributortwitter}}' target='_blank'>{{contributortwitter}}</i></li></ul>"
         var geoJSON = Sheetsee.createGeoJSON(data, optionsJSON)
         map = Sheetsee.loadMap("map")
         Sheetsee.addTileLayer(map, 'raybesiga.lbooidnh')
