--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div class="docs-section" id="intro">
       <h6 class="docs-header">Why?</h6>
-      <p>Easy place to search for the best wifi in Kampala. Especially for first time visitors</p>
+      <p>An easily searchable list of the best wifi hotspots in Kampala. Especially for first time visitors</p>
       <p>Love the idea? Tweet it! We appreciate the &#9829;</p>
       <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://raybesiga.com/wifihotspots" data-text="Map Kampala's Wifi Hotspots" data-via="sparkplugea" data-related="sparkplugea">Tweet</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
