correct jlord twitter

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </div>
 
 <footer>
-  <p class="small text-muted">Built with &#9829; by <a href="http://sparkpl.ug" target="_blank">Sparkplug</a>. Great job on <a href="http://jlord.us/sheetsee.js/" target="_blank">Sheetsee</a> by <a href="http://www.twitter.com/jlord" target="blank">Jessica Lord</p>
+  <p class="small text-muted">Built with &#9829; by <a href="http://sparkpl.ug" target="_blank">Sparkplug</a>. Great job on <a href="http://jlord.us/sheetsee.js/" target="_blank">Sheetsee</a> by <a href="https://twitter.com/jllord" target="blank">Jessica Lord</p>
 </footer>
 
     <script type="text/javascript">
