close add section

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </script>
         <p>To add a hostpot, access the Google Spreadsheet <a href="https://docs.google.com/spreadsheets/d/1sQaj4pt6Bn5Y6MoNin4NDs0WfJ200Fn4EFuccd0_Wvo/edit?usp=sharing" target="_blank">here</a>. Add the wifi hotspot details. Or copy, paste, edit. Smile, for a job well done, and refresh the page to look up your added hotspot. That's it.</p>
       </div>
-
+    </div>
   </div>
   <div class="section">
     <div class="container">
@@ -89,7 +89,7 @@
     </div>
   </div>
 
-  <script id="hotSpotsTable_template" type="text/html">
+    <script id="hotSpotsTable_template" type="text/html">
       <table>
       <tr><th class="tHeader">Name</th><th class="tHeader">Address</th><th class="tHeader">Date Added</th><th class="tHeader">Download Speed</th><th class="tHeader">Upload Speed</th><th class="">Elsewhere</th></tr>
         {{#rows}}
