--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
       <div id="hotSpotsTable"></div>
     </div>
   </div>
+  <div class="section">
+    <div class="container">
+      <footer>
+  <p class="small text-muted">Built with &#9829; by <a href="http://sparkpl.ug" target="_blank">Sparkplug</a>. Great job on <a href="http://jlord.us/sheetsee.js/" target="_blank">Sheetsee</a> by <a href="https://twitter.com/jllord" target="blank">Jessica Lord</p>
+</footer>
+    </div>
+  </div>
 
     <script id="hotSpotsTable_template" type="text/html">
       <table>
@@ -99,9 +106,7 @@
       </table>
     </script>
 
-<footer>
-  <p class="small text-muted">Built with &#9829; by <a href="http://sparkpl.ug" target="_blank">Sparkplug</a>. Great job on <a href="http://jlord.us/sheetsee.js/" target="_blank">Sheetsee</a> by <a href="https://twitter.com/jllord" target="blank">Jessica Lord</p>
-</footer>
+
 
 
 
